<resources>
    <string name="app_name">HappyProject</string>
    <string name="mine_unlogin">未登录</string>
    <string name="mine_text_num">0</string>
    <string name="mine_text_unpay">待付款</string>
    <string name="mine_text_recever">待收货</string>
    <string name="mine_text_complete">已完成</string>
    <string name="mine_text_all_orders">商品订单</string>
    <string name="mine_text_message">我的消息</string>
    <string name="mine_text_address">收货地址</string>
    <string name="text_coupons">优惠券</string>
    <string name="mine_text_order">空间订单</string>
    <string name="mine_text_space_like">喜欢的空间</string>
    <string name="mine_text_products_liked">喜欢的商品</string>
    <string name="mine_text_customer_service">联系客服</string>
    <string name="mine_text_designers_in">设计师注入</string>
    <string name="test_text">这个时候，那少女也看到了张小凡与躺在他身边还昏迷不醒的陆雪琪两人，显然也未想到这死灵渊下居然还有活人，脸色一变，也是吃了一惊。      随即，她看清了张小凡的面容，愣了一下，脸上掠过一丝惊奇，然後露出了微笑。      “真是人生何处不相逢啊！”她在黑暗中如美丽而盛开的百合，优雅地走了过来。      张小凡站起，有意无意地挡在了陆雪琪的身前，毕竟，到这阴灵妖兽出没的死灵渊下的，不会是什麽普通人。      少女走近了，张小凡这才看清，在她右手葱葱玉指上，夹著一朵白色的小花，竟会散发出淡淡白光，照亮了这女子附近的土地，也不知道这是什麽异种。      不过张小凡现在也无暇去顾及这花，虽然对著这个奇怪的女子，他心里依然有些警惕，不过无论如何，在这黑暗孤静的死灵渊下看到她，感觉上便立刻多了几分亲近。      “奶好。”张小凡本想说些客套问候的话，但出了口，却只剩下了这两个字。      少女看了他一眼，微笑道∶“这不是青云山的张小凡张少侠吗？怎麽你会跑到这鬼气森森的地方来了？这可不是你们该来的地方。”      张小凡一怔，道∶“奶怎麽知道我是青云门下？”      那少女笑了不答。      张小凡眉头一皱，只觉得这少女大不简单，正寻思处，却听那少女轻笑一声，道∶“请问张少侠，到这里有多久了，可找到『滴血洞』了吗？”      张小凡呆了一下，道∶“什麽滴血洞？”      那少女哼了一声，脸上笑容渐渐褪去，但依然平心静气地道∶“张少侠好会装糊涂，你们这些所谓正道人士，若不是为了滴血洞中的东西，又怎会到这黑暗肮脏的地方来？”      张小凡被她说得糊涂了，但隐约已明白这里有个滴血洞，洞里只怕有些要紧之物，但下山前从未听师父还有掌门师伯他们说过，但他此刻想的却不是这些，而是听出了那少女话里的意思，沉声道∶“奶说我们正道虚伪，那奶又是何人？”      那少女一弹身上水绿衣裳，夹在指间的花朵随著她玉一般的手在空中划过一道弧线，那白光在空中留下一道残痕，彷佛也眷念著这片黑暗，残留了许久，才慢慢消散。      “我，可不就是你们深恶痛绝的魔教妖女吗？”她巧笑嫣然。      张小凡心头一沉，忽有种失落的感觉，但这念头也只是一闪即过，不留痕迹，随即哼了一声，凝神戒备。      他自入了青云山一门，便听得各位师长师兄教诲魔教妖人如何为祸人间，残忍无道，青云门门规中更是严禁与魔道中人往来结交，彼此为生死之敌，不共戴天。      不过那少女看起来倒并没有仇深似海、立刻动手的意思，眼光反而瞄到了张小凡身後，看了一眼，忽然笑道∶“这位姐姐好像要醒了吧？”      张小凡回头一看，果然见陆雪琪微微翻身，嘴角动了两下，缓缓睁开了眼睛。张小凡大喜，返身道∶“奶醒了！”      不料陆雪琪突然面现惊容，挣扎道∶“小心┅┅”      张小凡还未反应过来，便只觉得周围忽然异香扑鼻，白光闪处，一朵白色鲜花出现在了眼前。      黑暗之中，死灵渊下，哪里会有什麽花朵？张小凡惊骇之下，退了一步，却见那花朵无风自动，彷佛在半空中对他微微展露笑颜，点了点头，顷刻之间，一朵花儿四分五裂，花瓣朵朵洁白可爱，边缘处却闪起了幽幽绿光，向他飞来。      就算是不知道那少女魔教身分，单看这异花也知道不对，张小凡陡然间被袭，手忙脚乱，连退几步，忙乱中举起手中烧火棍在身前一挡，那些疾射而来的花瓣与烧火棍玄青色的光芒接触，大部分被挡了下来，但其中还有几片险险掠过，差点伤到张小凡。      张小凡惊魂未定，心中咒骂这些魔教妖人果然个个奸险诡诈，师父师娘师兄们说的话真是至理名言，一字不差。不过此刻他眼光一扫，见那少女身形一动，却是向陆雪琪飞了过去。      张小凡大吃一惊，眼看陆雪琪重伤之後，几无回手之力，自己距离又被拉远，急忙手一挥将烧火棍祭起，冲向那绿衣少女。      听到风声，绿衣少女恬然微笑，右手在半空中一迎，刹那间所有的花瓣都如闪电一般飞了回来，聚集到了那朵花蕾之上，指间那朵散发著淡淡白光的小花迎了上去，白色的微光与烧火棍玄青色的光芒甫一接触，两相抵在半空，僵持片刻，似是不分胜负，各自飞了回去。      黑暗中，忽然响起了一声微带讶意的轻呼。      趁此机会，张小凡一面接著烧火棍，一面连忙回到陆雪琪身旁，挡在了她的身前，不让这诡异奸险的魔教妖女再施奸计。      不过那“诡异奸险”的妖女此刻却忽然停了下来，不再前进，任由张小凡回到陆雪琪身边，看著张小凡的眼色中大有惊愕之意。      刚才那次交手，她满以为以她手中的“伤心”奇花，轻易就能将张小凡治住，不料“伤心花”与那根烧火棍在半空抵住时，原本能借物传去直透人心，令人立时瘫倒的异香，竟是被抵了回来，而且还隐隐有反噬之意，让她吃惊不已。      张小凡挡在陆雪琪身前，扶她站起，低声问道∶“奶没事吧！陆师姐？”      陆雪琪微微摇头，张小凡这才放下心来，转头恨恨地道∶“无耻妖人，只会偷袭！”      那少女眼中讶色立刻消失，取而代之的是薄怒之色，哼了一声，道∶“好，等一会我就让你看看妖人的厉害！”      说话间她便要有所动作，张小凡连忙戒备，但心中却是叫苦，陆雪琪此刻靠在他身上，软弱无力，显然伤得极重，多半是毒势未清，而面前这魔教妖女诡异难测，动起手来只怕难以顾及陆师姐了。      可惜世事往往不能尽如人意，张小凡在这里脑中念头急转，却突然发现，事情越来越糟了。      黑暗中，又亮起了一点光，这光却与绿衣少女的不同，尽管是光亮，却是深色的，在黑暗中几乎让人以为那就是黑色的光。光芒中，一道幽幽的人影走了出来，停在了绿衣少女身旁，这是个身材高挑的女子，一身黑衣，面上还蒙著面纱，正是那日在山海苑里与这少女同行的同伴。      随後，在张小凡吃惊的目光中，黑暗中亮起了一道又一道的光线，大概又出现了五个人，身著黄衣，正是那日在山海苑中这少女的随从，此刻居然也全部到了此处。      张小凡只觉得喉咙发乾，在这许多道目光注视之下，忍不住身子发冷。就在这时，他忽然听到耳边传来陆雪琪轻微而无力的话∶“你快走，这些人道行都不在你我之下，不可力敌！”      张小凡转过头去，只见那张苍白而美丽的脸庞就在自己身旁，面上却没有担忧害怕之色，彷佛只是说著再正常不过的事一般。张小凡呆了一下，摇了摇头，抿紧了嘴唇，再一次转过头去，对著那些神秘出现的魔教中人。      “碧瑶，小心些，”那蒙面女子看著前方那两个人，目光最後落到了张小凡手中的烧火棍上，低声道∶“那根黑棒有些古怪。”      碧瑶，也就是绿衣少女，道∶“幽姨，奶看出了什麽？”      被她称为幽姨的蒙面女子看不清有什麽表情，但从她的话里听得出一丝困惑∶“好像是┅┅刚才那股凶气太像了，可是正道中人怎会有这东西，他们也不会操控这珠子，而且这、这是短棒，怎麽回事？”      碧瑶哼了一声，道∶“我倒要看看这东西有多厉害！”说著往前踏了一步，随即她身後的黄衣人也同时向前走去。张小凡一看不对，虽然有心对敌，但敌我悬殊太大，只得扶著陆雪琪向後退去。      那黑衣蒙面女子看起来鬼气很重，整个人在黑暗中直直地向前飘著，跟在碧瑶身旁，几如阴灵一般，以只有她们两人听得到的声音道∶“那少年手中的短棒凶气极重，奶感觉出来了吗？”      碧瑶看了前方紧张戒备的张小凡一眼，点了点头。      蒙面女子顿了一下，道∶“虽然如此，但我感觉这短棒中的凶力只怕还未尽放，似是被什麽压制住了，以我看来，只怕这短棒多半和我们圣教有些关系，这少年身分大是可疑，奶要三思而行。”      碧瑶皱了皱眉，道∶“幽姨，奶说怎麽做？”      蒙面女子话声转为平淡，道∶“擒下来就是了，带回去给奶父亲看看，宗主智通天地，必然知晓此物！”      碧瑶想了想，道∶“也好。”      说话间，她们脚下却没有停，一直向前逼去，没有她们两人的首肯，旁边的黄衣人自然也不会动手，双方一进一退在这说话间便走出了一段路。      张小凡扶著陆雪琪，心情越来越是紧张，耳边却渐渐听到了水波声，看来是走回到刚开始的那一湾水边。      碧瑶怔了一下，转头对蒙面女子道∶“幽姨，这里便是『无情海』了吗？”      那蒙面女子沉默了一下，却低声叹了口气，道∶“痴情只为无情苦！不错，这里便是五海之中最神秘的『无情海』了。”      “啊！”彷佛是年轻之故，碧瑶根本没在意到被她称为幽姨的蒙面女子话中的苦涩之意，大是兴奋，道∶“我从小就听父亲说过，无情海深藏地底，是九幽之海，而且听他说死灵渊下的滴血洞就在这无情海边，看来我们找了三天，终於快找到了。”      蒙面女子却是陷入了沉默，一声不吭。      碧瑶有些奇怪，看了看她，随即便不放在心上，转头道∶“好，现在我就先擒了你们，再去找那滴血洞！”      说著她手一挥，那五个黄衣人一起踏上，准备动手。张小凡背後是在黑暗中无边无际的无情海，前方又被这些魔教之人包围住了，真个是前无去路，退无可退，身处绝地之中。      陆雪琪感觉到身後那无情海上，吹来了一阵一阵的寒风，冷入心间，而自己体内酸软无力，更隐隐有头昏恶心的感觉，只怕是馀毒未清。      她是何等聪慧，不用想也知道这种情景，张小凡要照顾她只能是二人同死。      她转过头，向张小凡看去，这少年此刻似乎还是有些紧张，身体绷得很紧，连扶她的手也因紧张而用力，甚至於在他眼中，还有对生的渴望，对死的畏惧。      只是，他却分明没有，哪怕一丝的退缩。</string>
</resources>
