<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:background="#000"
        android:padding="10dp"
        >

        <ImageView
            android:id="@+id/currency_bar_left_cart_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:src="@mipmap/btn_shopping_cart"
            />

        <TextView
            android:id="@+id/currency_bar_middle_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="#fff"
            android:text="我的"
            />
        <ImageView
            android:id="@+id/currency_bar_right_setting_iamge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:src="@mipmap/icon_setting"
            android:layout_alignParentRight="true"
            />
    </RelativeLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/mine_linear_height"
            android:background="#000"
            android:orientation="vertical"
            android:gravity="center_horizontal">
            <ImageView
                android:id="@+id/mine_logo_image"
                android:layout_marginTop="@dimen/mine_image_top_marginTop"
                android:layout_width="@dimen/mine_image_top_long"
                android:layout_height="@dimen/mine_image_top_long"
                android:src="@mipmap/mine_launcher"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#fff"
                android:layout_marginTop="@dimen/mine_tv_marginTop"
                android:textSize="@dimen/mine_tv_textSize"
                android:text="@string/mine_unlogin"/>
            <LinearLayout
                android:background="#000"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/mine_linear_marginTop"
                android:layout_width="match_parent"
                android:layout_height="@dimen/mine_linearLayout_height">
                <LinearLayout
                    style="@style/MineLinearLayoutTop">
                    <TextView
                        style="@style/MineTVMenuNum"
                        android:text="@string/mine_text_num"/>
                    <TextView
                        style="@style/MineTVMenuName"
                        android:text="@string/mine_text_unpay"/>
                </LinearLayout>
                <LinearLayout
                    style="@style/MineLinearLayoutTop">
                    <TextView
                        style="@style/MineTVMenuNum"
                        android:text="@string/mine_text_num"/>
                    <TextView
                        style="@style/MineTVMenuName"
                        android:text="@string/mine_text_recever"/>
                </LinearLayout>
                <LinearLayout
                    style="@style/MineLinearLayoutTop">
                    <TextView
                        style="@style/MineTVMenuNum"
                        android:text="@string/mine_text_num"/>
                    <TextView
                        style="@style/MineTVMenuName"
                        android:text="@string/mine_text_complete"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/mine_linear_mid_height"
            android:layout_marginLeft="@dimen/mine_linear_mid_marginLeft"
            android:orientation="vertical">
            <LinearLayout
                android:id="@+id/mine_orders"
                style="@style/MineLinearLayoutGoods">
                <ImageView
                    style="@style/MineImage"
                    android:src="@mipmap/btn_frag_user_all_orders"/>
                <TextView
                    style="@style/MineTextView"
                    android:text="@string/mine_text_all_orders"/>
            </LinearLayout>
            <View
                style="@style/MineView"/>
            <LinearLayout
                android:id="@+id/mine_message"
                style="@style/MineLinearLayoutGoods">
                <ImageView
                    style="@style/MineImage"
                    android:src="@mipmap/btn_frag_user_message"/>
                <TextView
                    style="@style/MineTextView"
                    android:text="@string/mine_text_message"/>
            </LinearLayout>
            <View
                style="@style/MineView"/>
            <LinearLayout
                style="@style/MineLinearLayoutGoods">
                <ImageView
                    style="@style/MineImage"
                    android:src="@mipmap/btn_frag_user_address"/>/>
                <TextView
                    style="@style/MineTextView"
                    android:text="@string/mine_text_address"/>
            </LinearLayout>
            <View
                style="@style/MineView"/>
            <LinearLayout
                style="@style/MineLinearLayoutGoods">
                <ImageView
                    style="@style/MineImage"
                    android:src="@mipmap/btn_frag_user_coupons"/>
                <TextView
                    style="@style/MineTextView"
                    android:text="@string/text_coupons"/>
            </LinearLayout>
        </LinearLayout>
        <View
            style="@style/MineBigView"/>


        <LinearLayout
            style="@style/MineLinearLayoutMiddle">
            <LinearLayout
                style="@style/MineLinearLayoutGoods">
                <ImageView
                    style="@style/MineImage"
                    android:src="@mipmap/btn_frag_space_order"/>/>
                <TextView
                    style="@style/MineTextView"
                    android:text="@string/mine_text_order"/>
            </LinearLayout>
            <View
                style="@style/MineView"/>
            <LinearLayout
                android:id="@+id/mine_space_like"
                style="@style/MineLinearLayoutGoods">
                <ImageView
                    style="@style/MineImage"
                    android:src="@mipmap/btn_frag_space_like"/>/>
                <TextView
                    style="@style/MineTextView"
                    android:text="@string/mine_text_space_like"/>
            </LinearLayout>
        </LinearLayout>
        <View
            style="@style/MineBigView"/>
        <LinearLayout
            style="@style/MineLinearLayoutMiddle">
            <LinearLayout
                android:id="@+id/mine_products_liked"
                style="@style/MineLinearLayoutGoods">
                <ImageView
                    style="@style/MineImage"
                    android:src="@mipmap/btn_frag_user_products_liked"/>/>
                <TextView
                    style="@style/MineTextView"
                    android:text="@string/mine_text_products_liked"/>
            </LinearLayout>
            <View
                style="@style/MineView"/>
            <LinearLayout
                android:id="@+id/mine_service"
                style="@style/MineLinearLayoutGoods">
                <ImageView
                    style="@style/MineImage"
                    android:src="@mipmap/btn_frag_user_customer_service"/>/>
                <TextView
                    style="@style/MineTextView"
                    android:text="@string/mine_text_customer_service"/>
            </LinearLayout>

        </LinearLayout>
        <View
            style="@style/MineBigView"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:orientation="vertical">
            <LinearLayout
                android:id="@+id/mine_designers_in"
                style="@style/MineLinearLayoutGoods">
                <ImageView
                    style="@style/MineImage"
                    android:src="@mipmap/btn_frag_user_designers_in"/>/>
                <TextView
                    style="@style/MineTextView"
                    android:text="@string/mine_text_designers_in"/>
            </LinearLayout>

        </LinearLayout>
        <View
            style="@style/MineBigView"/>
    </LinearLayout>
    </ScrollView>
</LinearLayout>